# agentgateway

./: .gitattributes  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  SPEC.md  go.mod  go.sum  local.yaml
.github/vex/: openvex.json
.github/workflows/: debug_cache.yml  pull_request.yml  release.yml
api/: resource.pb.go  resource_json.gen.go
architecture/: README.md  cel.md  configuration.md  tcp-proxy-policies.md
common/scripts/: schema-to-md.sh
common/tools/: go.mod  go.sum
controller/: Makefile
controller/api/annotations/: agentgateway.go
controller/api/tests/: cel_test.go  celcost.go  validator.go
crates/agentgateway/: Cargo.toml
crates/agentgateway-app/: Cargo.toml
crates/celx/: Cargo.toml
crates/core/: Cargo.toml  build.rs
crates/protos/: build.rs
crates/xds/: build.rs
examples/basic/: config.yaml
examples/mcp-authentication/: config-multi-server.yaml
examples/multiplex/: config.yaml
examples/openapi/: config.yaml
examples/wasm-request-policy/: README.md  config.yaml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/cel_expression/: body-json  llm  mcp  optional  regex  request-path  variables
fuzz/corpus/llm_request_conversions/: chat-completions.json  messages.json  responses.json
fuzz/corpus/proxy_protocol/: v1-unknown  v1-valid
fuzz/fuzz_targets/: cel_expression.rs  llm_request_conversions.rs  proxy_protocol.rs
go/api/: resource.pb.go  resource_json.gen.go  workload.pb.go
schema/: README.md  cel.json  cel.md  config.json  config.md  local.json
tools/: go.mod  go.sum
xtask/src/: schema.rs
(+285 files in other folders)
